--- a/be/package.json
+++ b/be/package.json
@@ -15,15 +15,17 @@
     "@types/node": "^18.17.0",
     "express": "^4.18.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/chalk": "^2.2.0",
+    "argon2": "^0.40.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "esm": "^3.2.25",
+    "express-validator": "^7.0.1",
     "globby": "^10.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
