--- a/be/.env
+++ b/be/.env
@@ -1,8 +1,7 @@
 SEVER_PORT = 3000
-
 MONGO_USERNAME = "hunt3rr"
 MONGO_PASSWORD = "aPHxS0HRqRSM2azf"
-
 JWT = "VGGAMEGAMING"
-
 HASH_SALT = 12
+USER = "hhoang.it@hotmail.com"
+PASSWORD = "Hunter0909@!"
