--- a/be/package.json
+++ b/be/package.json
@@ -13,12 +13,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^18.17.0",
+    "@types/nodemailer": "^6.4.14",
     "express": "^4.18.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/chalk": "^2.2.0",
     "argon2": "^0.40.1",
     "chalk": "^4.1.2",
@@ -30,6 +30,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0"
   },
   "nodemonConfig": {
